--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 Django==4.2.4
-phonenumbers==8.13.19
-django-phonenumber-field==7.1.0
+django-phonenumber-field[phonenumberslite]==7.1.0
 Pillow==10.0.0
 environs==9.5.0
